--- a/middle-ui/src/partials/group-list.html
+++ b/middle-ui/src/partials/group-list.html
@@ -1,5 +1,5 @@
 <div ng-controller="GroupListController">
-    <div class="text-center padding-bottom-md"><a href="" class="btn btn-lg btn-primary" ng-click="showCreateGroup()">Create a
+    <div class="text-center margin-bottom-md"><a href="" class="btn btn-lg btn-primary" ng-click="showCreateGroup()">Create a
         new
         group</a></div>
     <div class="list-group">
