--- a/middle-ui/src/partials/group-details.html
+++ b/middle-ui/src/partials/group-details.html
@@ -1,12 +1,31 @@
 <div ng-controller="GroupDetailsController">
-    <div class="input-group padding-bottom-md"><input class="form-control" readonly="readonly" ng-model="copyUrl"/><span
+    <div class="input-group margin-bottom-md"><input class="form-control" readonly="readonly" ng-model="copyUrl"/><span
             class="input-group-btn"><button
-            class="btn btn-default"><i class="glyphicon glyphicon-copy"></i></button></span></div>
-    <div></div>
-    <div class="map"></div>
+            class="btn btn-default" clipboard="" text="copyUrl" on-copied="copyDidSucceed()"
+            on-failed="copyDidFail(err)" uib-tooltip="Copied!" tooltip-is-open="showCopySuccessTooltip" tooltip-trigger="none"><i class="glyphicon glyphicon-copy margin-right-sm"></i>Copy me!
+    </button></span></div>
+    <div id="group-details-map" class="margin-bottom-md" middle-map="members"></div>
+    <div class="text-right margin-bottom-md">
+        <label class="margin-right-sm">
+            <span ng-if="!links[selectedAlgorithm]">Algorithm:</span>
+            <a href="" title="Learn more about this algorithm" ng-click="openNew(links[selectedAlgorithm])"
+               ng-if="links[selectedAlgorithm]">Algorithm:</a>
+        </label>
+        <div class="btn-group" uib-dropdown="">
+            <button class="btn btn-info">{{ selectedAlgorithm | capitalize }}</button>
+            <button class="btn btn-info" uib-dropdown-toggle=""><span class="caret"></span></button>
+            <ul uib-dropdown-menu="">
+                <li ng-repeat="algorithm in algorithms"><a href="" ng-click="selectAlgorithm(algorithm)">{{ algorithm |
+                    capitalize }}</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="list-group">
-        <a href="" class="list-group-item" ng-class="{disabled: isActive(member)}" ng-repeat="member in members" ng-click="toggle(member)">
-            <h5>{{ member.name }}
+        <a href="" class="list-group-item" ng-repeat="member in members" ng-click="toggle(member)">
+            <h5>
+                <i class="pull-right glyphicon margin-right-sm"
+                   ng-class="{'glyphicon-ok': isActive(member), 'glyphicon-minus': !isActive(member)}"></i>
+                {{ member.name }}
                 <small>({{ member.latitude }}, {{ member.longitude }})</small>
             </h5>
         </a>
