--- a/middle-ui/src/middle.css
+++ b/middle-ui/src/middle.css
@@ -1,9 +1,42 @@
 .margin-bottom-md {
     margin-bottom: 15px;
 }
+
 .margin-right-sm {
     margin-right: 10px;
 }
+
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+}
+
 #group-details-map {
     height: 300px;
+}
+
+.glyphicon-spin {
+    -webkit-animation: spin 1s infinite linear;
+    animation: spin 1s infinite linear
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0)
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg)
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0)
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg)
+    }
 }
