--- a/middle-ui/src/partials/about-middle.html
+++ b/middle-ui/src/partials/about-middle.html
@@ -1,3 +1,12 @@
 <div class="modal-header"><a class="close" ng-click="$dismiss()">&times;</a></div>
-<div class="modal-body"></div>
+<div class="modal-body">
+    <div id="about-middle">
+        <uib-carousel no-wrap="true">
+            <uib-slide ng-repeat="slide in [0, 1]" index="$index">
+                <h1>/middle/</h1>
+                <p>Welcome to /middle/</p>
+            </uib-slide>
+        </uib-carousel>
+    </div>
+</div>
 <div class="modal-footer"></div>
