--- a/middle-ui/src/partials/group-details.html
+++ b/middle-ui/src/partials/group-details.html
@@ -7,15 +7,15 @@
     <div id="group-details-map" class="margin-bottom-md" middle-map="members"></div>
     <div class="text-right margin-bottom-md">
         <label class="margin-right-sm">
-            <span ng-if="!links[selectedAlgorithm]">Algorithm:</span>
-            <a href="" title="Learn more about this algorithm" ng-click="openNew(links[selectedAlgorithm])"
-               ng-if="links[selectedAlgorithm]">Algorithm:</a>
+            <span ng-if="!selectedAlgorithm.link">Algorithm:</span>
+            <a href="" title="Learn more about this algorithm" ng-click="openNew(selectedAlgorithm.link)"
+               ng-if="selectedAlgorithm.link">Algorithm:</a>
         </label>
         <div class="btn-group" uib-dropdown="">
-            <button class="btn btn-info">{{ selectedAlgorithm | capitalize }}</button>
+            <button class="btn btn-info">{{ selectedAlgorithm.name | capitalize }}</button>
             <button class="btn btn-info" uib-dropdown-toggle=""><span class="caret"></span></button>
             <ul uib-dropdown-menu="">
-                <li ng-repeat="algorithm in algorithms"><a href="" ng-click="selectAlgorithm(algorithm)">{{ algorithm |
+                <li ng-repeat="algorithm in algorithms"><a href="" ng-click="selectAlgorithm(algorithm)">{{ algorithm.name |
                     capitalize }}</a></li>
             </ul>
         </div>
