--- a/middle-ui/src/partials/group-list.html
+++ b/middle-ui/src/partials/group-list.html
@@ -1,7 +1,8 @@
 <div ng-controller="GroupListController">
-    <div class="text-center margin-bottom-md"><a href="" class="btn btn-lg btn-primary" ng-click="showCreateGroup()">Create a
+    <div class="text-center margin-bottom-md"><a href="" class="btn btn-lg btn-warning" ng-click="showCreateGroup()">Create a
         new
         group</a></div>
+    <spinner ng-if="isLoadingGroups"></spinner>
     <div class="list-group">
         <a class="list-group-item" ng-repeat="group in groups" ui-sref="groupDetails({ groupId: group.id })">
             <h5><span class="badge">{{ group.ts
