--- a/middle-ui/src/partials/whats-new.html
+++ b/middle-ui/src/partials/whats-new.html
@@ -1,3 +1,13 @@
-<div class="modal-header"><a class="close" ng-click="$dismiss()">&times;</a></div>
-<div class="modal-body"></div>
+<div class="modal-header">
+    <a class="close" ng-click="$dismiss()">&times;</a>
+    <h4 class="modal-title">What's new?</h4>
+</div>
+<div class="modal-body">
+    <div ng-repeat="update in updates">
+        <h3>{{ update.ts | date }}</h3>
+        <ul>
+            <li ng-repeat="description in update.descriptions">{{ description }}</li>
+        </ul>
+    </div>
+</div>
 <div class="modal-footer"></div>
