--- a/middle-ui/src/partials/group-details.html
+++ b/middle-ui/src/partials/group-details.html
@@ -2,7 +2,8 @@
     <div class="input-group margin-bottom-md"><input class="form-control" readonly="readonly" ng-model="copyUrl"/><span
             class="input-group-btn"><button
             class="btn btn-default" clipboard="" text="copyUrl" on-copied="copyDidSucceed()"
-            on-failed="copyDidFail(err)" uib-tooltip="Copied!" tooltip-is-open="showCopySuccessTooltip" tooltip-trigger="none"><i class="glyphicon glyphicon-copy margin-right-sm"></i>Copy me!
+            on-failed="copyDidFail(err)" uib-tooltip="Copied!" tooltip-is-open="showCopySuccessTooltip"
+            tooltip-trigger="none"><i class="glyphicon glyphicon-copy margin-right-sm"></i>Copy me!
     </button></span></div>
     <div id="group-details-map" class="margin-bottom-md" middle-map="members" algorithm="selectedAlgorithm"></div>
     <div class="text-right margin-bottom-md">
@@ -15,13 +16,17 @@
             <button class="btn btn-info">{{ selectedAlgorithm.name | capitalize }}</button>
             <button class="btn btn-info" uib-dropdown-toggle=""><span class="caret"></span></button>
             <ul uib-dropdown-menu="">
-                <li ng-repeat="algorithm in algorithms"><a href="" ng-click="selectAlgorithm(algorithm)">{{ algorithm.name |
+                <li ng-repeat="algorithm in algorithms"><a href="" ng-click="selectAlgorithm(algorithm)">{{
+                    algorithm.name |
                     capitalize }}</a></li>
             </ul>
         </div>
     </div>
+    <spinner ng-if="isLoadingMembers"></spinner>
+    <uib-alert type="info" ng-if="!isLoadingMembers && members.length === 0">No members yet.</uib-alert>
     <div class="list-group">
-        <a href="" class="list-group-item" ng-repeat="member in members" ng-click="toggle(member)">
+        <a href="" class="list-group-item" ng-repeat="member in selectedGroup.members | orderBy : 'ts' : true"
+           ng-click="toggle(member)">
             <h5>
                 <i class="pull-right glyphicon margin-right-sm"
                    ng-class="{'glyphicon-ok': isActive(member), 'glyphicon-minus': !isActive(member)}"></i>
